Commit 7: Assessment 5 Part 1

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Assessment_1/DrinkOrder/target/
 /Assessment_2/DrinkMenuFile/target/
 /Assessment_4/LearnerCollection/target/
+/Assessment_5/FirstJavaFX/target/
